k8s/MS-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myservice
  template:
    metadata:
      labels:
        app: myservice
    spec:
      containers:
        - name: DevOPS-container
          image: bgutec/guigui77imagedocker:Myservice2.1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
      restartPolicy: Always
